--- a/projetin.css
+++ b/projetin.css
@@ -10,13 +10,18 @@
 }
 #subtitle{
     font-family: "Lucida Console", Courier, monospace;
-    color: #001b41;
+    color: #dbe5f3;
 }
 
 body{
     text-align: center;
     background: rgb(145,168,208);
     background: radial-gradient(circle, rgba(145,168,208,1) 9%, rgba(206,188,204,1) 50%, rgba(247,202,201,1) 73%);
+}
+
+#canvas{
+    background: white; 
+    border:3px outset rgb(140, 160, 224);
 }
 
 /* 'change mode' button */
